@@ -1,3 +1,7 @@
+GJ 30/09/05
+- Fixed some protocols to comply to the (String,Object) signature constructor.
+  In particular: IdleProtocol and SimpleNewscast has been fixed.
+
 MJ 30/09/05
 - cleaned up the Configuration package. Note that the behavior of getInstance
   is changed; the only consequence is that now protocols MUST implement
